--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install -qq --upgrade pip
-        pip install '[tests]'
+        pip install '.[tests]'
     - name: Lint with flake8
       run: flake8 src/
     - name: Check black formatting
